--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,17 @@
     src: url(fonts/NeueMontreal-Regular.otf);
 }
 
+@font-face{
+    font-family: 'Yukita Sans';
+    src: url(fonts/YukitaSans-Bold.otf)
+}
+
+@font-face{
+    font-family: 'Lemon Milk';
+    src: url(fonts/LEMONMILK-Regular.otf)
+}
+
+
 html, body{
     height: 100vh;
     width: 100vw;
@@ -22,6 +33,7 @@ h1, h2, button{
 h1{
     font-size: 55px;
     text-align: center;
+    font-weight: light;
 }
 
 h2{
@@ -67,6 +79,18 @@ button:hover{
     align-items: center;
 }
 
+.bigger{
+    font-size: 60px;
+    font-weight: bold;
+    font-family: 'Lemon Milk', 'Neue Montreal', sans-serif;
+}
+
+.biggerPlay{
+    font-size: 55px;
+    font-weight: bold;
+    font-family: 'Yukita Sans', 'Neue Montreal', sans-serif;
+}
+
 .animatedBackgroundChange{
-    transition: background-color 2s ease, color 1s ease;
+    transition: background-color 1s ease, color 1s ease;
 }
