--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ body.animatedBackgroundChange{
 
     
 }
-
+/*
 @media (min-width: 1440px){
     .container{
         display: flex;
@@ -187,7 +187,6 @@ body.animatedBackgroundChange{
     }
 
     h1{
-        font-size: 70px;
         text-align: center;
         font-weight: light;
         display: flex;
@@ -195,12 +194,10 @@ body.animatedBackgroundChange{
     }
     
     h2{
-        font-size: 65px;
         font-weight: bold;
     }
 
     .bigger{
-        font-size: 75px;
         font-weight: bold;
         font-family: 'Lemon Milk', 'Neue Montreal', sans-serif;
     }
@@ -210,36 +207,37 @@ body.animatedBackgroundChange{
         height: 75px; 
         font-size: 15px;
     }
-}
+}*/
 
 @media (min-width: 2560px){
     .container{
         display: flex;
         flex-direction: column;
+        gap: 0px;
     }
 
     h1{
-        font-size: 140px;
+        font-size: 100px;
         text-align: center;
         font-weight: light;
         display: flex;
-        gap: 10px;
+        gap: 25px;
     }
     
     h2{
-        font-size: 130px;
+        font-size: 95px;
         font-weight: bold;
     }
 
     .bigger{
-        font-size: 150px;
+        font-size: 110px;
         font-weight: bold;
         font-family: 'Lemon Milk', 'Neue Montreal', sans-serif;
     }
 
     button{
-        width: 300px;   
-        height: 150px; 
-        font-size: 30px;
+        width: 200px;   
+        height: 125px; 
+        font-size: 25px;
     }
 }
