--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ body.animatedBackgroundChange{
     .container{
         display: flex;
         flex-direction: column;
+        max-height: 100vh;
     }
 
     h1{
@@ -125,6 +126,7 @@ body.animatedBackgroundChange{
     .container{
         display: flex;
         flex-direction: column;
+        max-height: 100vh;
     }
 
     h1{
@@ -156,6 +158,8 @@ body.animatedBackgroundChange{
     .container{
         display: flex;
         flex-direction: column;
+        max-height: 100vh;
+
     }
 
     h1{
@@ -179,35 +183,6 @@ body.animatedBackgroundChange{
 
     
 }
-/*
-@media (min-width: 1440px){
-    .container{
-        display: flex;
-        flex-direction: column;
-    }
-
-    h1{
-        text-align: center;
-        font-weight: light;
-        display: flex;
-        gap: 10px;
-    }
-    
-    h2{
-        font-weight: bold;
-    }
-
-    .bigger{
-        font-weight: bold;
-        font-family: 'Lemon Milk', 'Neue Montreal', sans-serif;
-    }
-
-    button{
-        width: 150px;   
-        height: 75px; 
-        font-size: 15px;
-    }
-}*/
 
 @media (min-width: 2560px){
     .container{
